# generative-ui-london-hackathon-starter

./: .env.example  FROZEN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  frozen-banner.yml  nightly-gemini-probe.yml
a2a/: README.md
a2a/compliance/: check.ts
a2a/sample-subagent/: .gitignore  langgraph.json  main.py  pyproject.toml
agent/: langgraph.json  main.py  pyproject.toml
agent/src/a2ui/schemas/: project_dashboard_schema.json  project_detail_schema.json  sprint_board_schema.json  status_report_draft_schema.json
agent/src/domains/: README.md
agent/src/tools/: project_detail.py
agent/src/widgets/: README.md  flight_card.fixture.json  flight_card.json  product_card.fixture.json  product_card.json  project_dashboard.fixture.json  project_dashboard.json  project_detail.fixture.json  project_detail.json  sprint_board.fixture.json  sprint_board.json  status_report_draft.fixture.json  status_report_draft.json
other-examples/: README.md
other-examples/a2ui-pdf-analyst/: EXAMPLE.json  README.md  VENDOR_SOURCE.md  package.json  pnpm-lock.yaml
other-examples/a2ui-pdf-analyst/agent/: .env.example  main.py  pyproject.toml  smoke_gemini_port.py
other-examples/legal-contract-review/agent/: .gitignore  graph.py  pyproject.toml  tools.py
public/: offline-envelopes.json
scripts/: doctor.ts  validate-widget.ts  verify-pins.sh
src/app/: globals.css
src/app/(pdf)/: pdf-analyst.css
src/components/example-layout/: index.tsx
src/components/pdf-analyst/: Providers.tsx
src/hooks/: use-example-suggestions.tsx
(+15 files in other folders)
